# ABQ-LLM

./: .clang-format  .gitignore  README.md  requirements.txt
algorithm/: categories.py  datautils.py  generate_act_scale_shift.py  main.py  parallel_utils.py  requirements.txt  run_pretrain_abq_model.py  setup.py  utils.py
algorithm/ABQ/csrc/: ABQ_cuda.cu  abq_gemm_wrapper.cu  abq_gemm_wrapper.h
algorithm/ABQ/csrc/common/: base.h  memory.h  pack.h  timer.h
algorithm/ABQ/csrc/mma_any/: aq_bmma_kernel.h  aq_bmma_library.cu  aq_bmma_library.h  aq_bmma_op.h  aq_wmma_kernel.h  aq_wmma_library.cu  aq_wmma_library.h  aq_wmma_op.h  bmma.h
algorithm/models/: int_falcon_layer.py  int_llama_layer.py  int_opt_layer.py  transformation.py
algorithm/quantize/: abq_llm.py  abq_norm.py  int_linear.py  int_matmul.py  quantizer.py  utils.py
algorithm/scripts/Llama-2/Llama-2-13b/: w2a16.sh  w2a6.sh  w2a8.sh  w3a16.sh  w3a8.sh  w4a16.sh  w4a4.sh  w4a8.sh  w6a6.sh  w8a8.sh
algorithm/scripts/Llama-2/Llama-2-7b/: w2a16.sh  w2a6.sh  w2a8.sh  w3a16.sh  w3a8.sh  w4a16.sh  w4a4.sh  w4a8.sh  w6a6.sh  w8a8.sh
algorithm/scripts/llama/llama-13b/: w2a16.sh  w2a6.sh  w2a8.sh  w3a16.sh  w3a8.sh  w4a16.sh  w4a4.sh  w4a8.sh  w6a6.sh  w8a8.sh
algorithm/scripts/llama/llama-7b/: w2a16.sh  w2a6.sh  w2a8.sh  w3a16.sh  w3a8.sh  w4a16.sh  w4a4.sh  w4a8.sh  w6a6.sh  w8a8.sh
engine/: CMakeLists.txt  build.bat  build.sh  builds.bat  builds.sh  gen_kernel.cpp  gen_layout.cpp  test.bat  test.sh  test_any_mma.cu  test_any_wmma.cu  test_layout.cc  test_w4a4_int_base.cu  test_w4a4_int_wmma.cu  test_w4a4_uint_base.cu  test_w4a4_uint_wmma.cu
engine/cmake/: CUDA.cmake  cuDNN.cmake
engine/common/: base.h  memory.h  pack.cu  pack.h  timer.h
engine/mma_any/: aq_bmma_kernel.h  aq_bmma_library.cu  aq_bmma_library.h  aq_bmma_op.h  aq_wmma_kernel.h  aq_wmma_library.cu  aq_wmma_library.h  aq_wmma_op.h  bmma.h
engine/mma_any/aq_bmma_impl/: aq_bmma_w2a2.cu  aq_bmma_w2a2.h  aq_bmma_w2a4.cu  aq_bmma_w2a4.h  aq_bmma_w2a6.cu  aq_bmma_w2a6.h  aq_bmma_w2a8.cu  aq_bmma_w2a8.h  aq_bmma_w3a3.cu  aq_bmma_w3a3.h  aq_bmma_w3a8.cu  aq_bmma_w3a8.h  aq_bmma_w4a4.cu  aq_bmma_w4a4.h  aq_bmma_w4a8.cu  aq_bmma_w4a8.h  aq_bmma_w5a5.cu  aq_bmma_w5a5.h  aq_bmma_w6a6.cu  aq_bmma_w6a6.h  aq_bmma_w7a7.cu  aq_bmma_w7a7.h  aq_bmma_w8a8.cu  aq_bmma_w8a8.h
engine/mma_any/aq_wmma_impl/: aq_wmma_w2a2.cu  aq_wmma_w2a2.h  aq_wmma_w2a4.cu  aq_wmma_w2a4.h  aq_wmma_w2a6.cu  aq_wmma_w2a6.h  aq_wmma_w2a8.cu  aq_wmma_w2a8.h  aq_wmma_w3a3.cu  aq_wmma_w3a3.h  aq_wmma_w3a8.cu  aq_wmma_w3a8.h  aq_wmma_w4a4.cu  aq_wmma_w4a4.h  aq_wmma_w4a8.cu  aq_wmma_w4a8.h  aq_wmma_w5a5.cu  aq_wmma_w5a5.h  aq_wmma_w6a6.cu  aq_wmma_w6a6.h  aq_wmma_w7a7.cu  aq_wmma_w7a7.h  aq_wmma_w8a8.cu  aq_wmma_w8a8.h
engine/test/test_mma/: test_mma.h  test_mma_w2a2.cu  test_mma_w2a4.cu  test_mma_w2a6.cu  test_mma_w2a8.cu  test_mma_w3a3.cu  test_mma_w3a8.cu  test_mma_w4a4.cu  test_mma_w4a8.cu  test_mma_w5a5.cu  test_mma_w6a6.cu  test_mma_w7a7.cu  test_mma_w8a8.cu
engine/test/test_wmma/: test_wmma.h  test_wmma_w2a2.cu  test_wmma_w2a4.cu  test_wmma_w2a6.cu  test_wmma_w2a8.cu  test_wmma_w3a3.cu  test_wmma_w3a8.cu  test_wmma_w4a4.cu  test_wmma_w4a8.cu  test_wmma_w5a5.cu  test_wmma_w6a6.cu  test_wmma_w7a7.cu  test_wmma_w8a8.cu
engine/wmma_any/: wmma_any.cu  wmma_any.h  wmma_any_template.cuh
fastertransformer/: .gitignore  CMakeLists.txt  README.md  build.sh  profling.sh
fastertransformer/examples/cpp/: CMakeLists.txt
fastertransformer/examples/cpp/llama/: CMakeLists.txt  llama_config.ini  llama_example.cc  llama_example_early.cc
fastertransformer/examples/cpp/llamaV2/: CMakeLists.txt  llamaV2_config.ini  llamaV2_example.cc  llamaV2_triton_example.cc  output_ids_70b_zh.csv  output_ids_7b.csv  start_ids.csv  stop_words.csv
fastertransformer/examples/cpp/multi_gpu_gpt/: CMakeLists.txt  gpt_config.ini  gpt_example_utils.cc  gpt_example_utils.h  start_ids.csv
fastertransformer/examples/cpp/seedgpt/: CMakeLists.txt  gpt_config.ini  out.csv  seed_example_utils.cc  seed_example_utils.h  seed_gpt_example.cc  start_ids.csv  start_ids_opt.csv
fastertransformer/examples/pytorch/baichuan2/: baichuanv2.py
fastertransformer/examples/pytorch/llama/: decode.py  inference_bytennv2.py  input_prompts.json  llama_example.py  llamav1.py
fastertransformer/examples/pytorch/llama2/: README.txt  llama_example.py  llamav2.py  start_ids.csv
fastertransformer/examples/pytorch/vit/: infer_visiontransformer_int8_op.py
fastertransformer/models/: seedgpt-merges.txt  seedgpt-vacab.json
fastertransformer/models/seed-models/13B/: config.json
fastertransformer/src/fastertransformer/kernels/: CMakeLists.txt  activation_kernels.cu  activation_kernels.h  add_residual_kernels.cu  add_residual_kernels.h  (+14 more)
fastertransformer/src/fastertransformer/kernels/abqgemm/: CMakeLists.txt  abq_gemm_wrapper.cu  abq_gemm_wrapper.h
fastertransformer/src/fastertransformer/kernels/abqgemm/common/: memory.h
fastertransformer/src/fastertransformer/kernels/abqgemm/mma_any/: aq_bmma_kernel.h  aq_bmma_library.cu  aq_bmma_library.h  aq_bmma_op.h  aq_wmma_kernel.h  aq_wmma_library.cu  aq_wmma_library.h  aq_wmma_op.h  bmma.h
fastertransformer/src/fastertransformer/kernels/abqgemm/mma_any/aq_bmma_impl/: aq_bmma_w2a8.cu  aq_bmma_w2a8.h
fastertransformer/src/fastertransformer/kernels/abqgemm/mma_any/aq_wmma_impl/: aq_wmma_w2a8.cu  aq_wmma_w2a8.h
fastertransformer/src/fastertransformer/models/llamaV2/: CMakeLists.txt  LlamaV2.cc  LlamaV2.h  LlamaV2ContextDecoder.cc  LlamaV2ContextDecoder.h  LlamaV2Decoder.cc  LlamaV2Decoder.h  LlamaV2DecoderLayerWeight.cc  LlamaV2DecoderLayerWeight.h  LlamaV2Weight.cc  LlamaV2Weight.h
fastertransformer/src/fastertransformer/models/seedgpt/: CMakeLists.txt  SeedGPT.cc  SeedGPT.h  SeedGPTContextDecoder.cc  SeedGPTContextDecoder.h  SeedGPTDecoder.cc  SeedGPTDecoder.h  SeedGPTDecoderLayerWeight.cc  SeedGPTDecoderLayerWeight.h  SeedGPTWeight.cc  SeedGPTWeight.h
fastertransformer/tests/gemm_dequantize/: single_test.py
fastertransformer/tests/weight_only_quant_ops/: single_test.py
(+111 files in other folders)
